--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <script src="index.js" defer></script>    
     </head>
     <body>
-        <h1>Hello You.</h1>
+        <h1>Hello.</h1>
     </body>
 </html>
