Updated working page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     </head>
     <body>
         <h1>Hello.</h1>
+        <br>
+        <p>Currently this page is private as I'm re-writing and re-organizing, whoops! I guess this website is a 90s throwback site now.</p>
+        <p>Have a nice day!</p>
+        <p>Love,<br>~nour</p>
     </body>
 </html>
